changelent de la couleur du bouton

--- a/styles.css
+++ b/styles.css
@@ -226,11 +226,11 @@ button:hover,
 }
 
 .btn-secondary {
-  background-color: #6c757d;
+  background-color: #1f77b4;
 }
 
 .btn-secondary:hover {
-  background-color: #5a6268;
+  background-color: #155d8b;
 }
 
 .btn-success {
